// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OptionalFields /> Snapshot renders correctly 1`] = `
<div
  className="objectlist-dropdown"
>
  <button
    className="objectlist-button objectlist-button--dropdown objectlist-button--borderless"
  >
     Change columns
  </button>
  <div
    className="objectlist-dropdown__menu objectlist-dropdown__menu--borderless"
  >
    <OptionalField
      className="objectlist-dropdown__item"
      enabled={true}
      fieldKey="a"
      name="Apple"
      onChange={[MockFunction]}
    />
    <OptionalField
      className="objectlist-dropdown__item"
      enabled={false}
      fieldKey="c"
      name="Cat"
      onChange={[MockFunction]}
    />
  </div>
</div>
`;

exports[`<OptionalFields /> Snapshot renders correctly 2`] = `
<div
  className="objectlist-dropdown open"
>
  <button
    className="objectlist-button objectlist-button--dropdown objectlist-button--borderless open"
  >
     Change columns
  </button>
  <div
    className="objectlist-dropdown__menu objectlist-dropdown__menu--borderless"
  >
    <OptionalField
      className="objectlist-dropdown__item"
      enabled={true}
      fieldKey="a"
      name="Apple"
      onChange={[MockFunction]}
    />
    <OptionalField
      className="objectlist-dropdown__item"
      enabled={false}
      fieldKey="c"
      name="Cat"
      onChange={[MockFunction]}
    />
  </div>
</div>
`;
